# chess

./: .env  .gitignore  LICENSE  README.md  docker-compose.debug.yaml  nginx-config.conf
backend/: .gitignore
backend/app/: db.py
backend/app/api/: api.py
backend/app/api/endpoints/: games_endpoint.py  users_endpoint.py
backend/app/crud/: users_curd.py
backend/app/models/: game_model.py  game_turn_model.py  user_model.py
backend/database/: database.py
backend/database/models/: game_turns_model.py  games_model.py  users_model.py
backend/endpoints/: games_endpoint.py  root_endpoint.py  users_endpoint.py
chess-service/: dockerfile  requirements.txt
chess-service/app/: config.py  database.py  main.py
chess-service/app/api/: api.py
chess-service/app/api/endpoints/: games_endpoint.py  root_endpoint.py  users_endpoint.py
chess-service/app/models/: game_model.py  game_turn_model.py  user_model.py
chess-service/app/schemas/: user_schemas.py
users-service/: dockerfile  pyproject.toml
users-service/app/: config.py  database.py  main.py
users-service/app/api/: users_api.py
users-service/app/crud/: users_curd.py
users-service/app/models/: user_model.py
users-service/app/schemas/: user_schemas.py
