[tool.poetry]
name = "users-service"
version = "0.1.0"
description = ""
authors = ["Sergey Akhalkov <sergey.akhalkov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
asyncpg = "^0.25.0"
uvicorn = "^0.17.6"
email-validator = "^1.2.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
